# datacamp

./: .gitignore  README.md
trainings/: README.md  pyproject.toml
trainings/code/: Predicting Temperature in London.ipynb
trainings/code/mlruns/0/: meta.yaml
trainings/code/mlruns/0/044c9cfd79bd4408b960e755a36ecb12/: meta.yaml
trainings/code/mlruns/0/0cc9ae6fb4af4dcdb7f37319a35e20b6/: meta.yaml
trainings/code/mlruns/0/281a6f2bba8a4ec292e6ba1dd776a21a/: meta.yaml
trainings/code/mlruns/0/30d4892e3f034f5b855ee836ee92800e/: meta.yaml
trainings/code/mlruns/0/366538e2fa554f44a99d861498e127d7/: meta.yaml
trainings/code/mlruns/0/3f7a41b1c4d94532807411d37dcb4c58/: meta.yaml
trainings/code/mlruns/0/4aca883eb12e4e188f530b379a866d0d/: meta.yaml
trainings/code/mlruns/0/4d4d5e9502f44c1e9ca4c0cf6dddabe3/: meta.yaml
trainings/code/mlruns/0/5b3a9fd01643422c8aad4d493b6c4d24/: meta.yaml
trainings/code/mlruns/0/abd285c3c42440f99f9ba08f5b15c61c/: meta.yaml
trainings/code/mlruns/0/acfec95d2d9942c8b00c40e65a9e7860/: meta.yaml
trainings/code/mlruns/0/cd4fb9b71a1e462f91545d23d80a2f3b/: meta.yaml
trainings/code/mlruns/0/d25c85098b2844e982f8c728ff289ae6/: meta.yaml
trainings/code/mlruns/0/d8e04dca064647d1818627c9ca002b04/: meta.yaml
trainings/code/mlruns/0/da250d3b84cf46409b4b8336f42e2afb/: meta.yaml
trainings/code/mlruns/0/f7e7ae22c852486db2b7dd9043009c45/: meta.yaml
trainings/code/mlruns/0/fc78d3dace8947f4aed9636d0cfb0037/: meta.yaml
trainings/code/mlruns/0/fe6e635da0ac4e1aa0000538de2617f1/: meta.yaml
(+272 files in other folders)
